# unichat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  renovate.json
unicrawl/: cli.py
v0.1/: .envrc  README.md  pyproject.toml
v0.1/backend/: .env  .env.example  INGESTION_README.md  README.md  docker-compose.yml  requirements.txt
v0.1/backend/app/: answer_generation.py  db.py  main.py  models.py  schemas.py  service.py  settings.py
v0.1/frontend/: README.md  pubspec.yaml
v0.1/frontend/lib/: main.dart
v0.1/frontend/linux/: CMakeLists.txt
v0.1/frontend/test/: widget_test.dart
v0.1/frontend/web/: index.html  manifest.json
v0.1/frontend/windows/: CMakeLists.txt
v0.1/rag/: __init__.py  answerer.py  bm25.py  chunker.py  config.py  corpus.py  embedding.py  index_store.py  retriever.py  text_extractor.py  types.py
v0.1/unicrawl/: __init__.py  cli.py
v0.1/unicrawl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
v0.1/unicrawl/crawler/: __init__.py  extract_links.py  fetch_page.py  run_crawl.py
v0.1/unicrawl/logging/: timing_config.py
v0.1/unicrawl/models/: crawl_config.py  page_record.py
v0.1/unicrawl/normalization/: __init__.py  extract_university_name.py  normalize_url.py  should_skip_url.py
v0.1/unicrawl/robots/: can_fetch_url.py  load_robots_parser.py
v0.1/unicrawl/storage/: delete_frontier_checkpoint.py  frontier_checkpoint.py  is_page_persisted.py  read_frontier_checkpoint.py  save_page.py  write_link_graph.py  write_manifest.py
v0.2/: .env.example  .envrc  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
v0.2/adrs/: 0001-monorepo-structure.md  0002-embedding-model.md
v0.2/docs/adr/: 0001-monorepo-structure.md
v0.2/migrations/: env.py
v0.2/migrations/versions/: 001_initial_schema.py  002_add_embeddings_cache.py  003_rename_raw_html_gcs_path.py  004_make_page_type_nullable.py
v0.2/storage/: schema.txt
v0.2/tests/: conftest.py
(+1291 files in other folders)
