[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unicrawl"
version = "0.1.0"
description = "Minimal university HTML crawler"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "syntok>=1.4.4",
]

[project.scripts]
unicrawl = "unicrawl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["unicrawl*", "rag*"]
