[project]
name = "unichat"
version = "0.2.0"
description = "University knowledge-base chatbot platform"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    # Database
    "asyncpg>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.15,<2",
    "pgvector>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    # Embedding
    "httpx>=0.28,<1",
    # Utilities
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.2,<3",
    "crawlee[beautifulsoup]>=1.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-httpx>=0.35,<1",
    "testcontainers[postgres]>=4,<5",
    "schemathesis>=3,<4",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
]
ingestion = [
    "crawlee[beautifulsoup]>=1.6,<2",
    "trafilatura>=2,<3",
    "anthropic>=0.52,<1",
    "huggingface_hub>=0.14,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
target-version = "py313"
line-length = 99
lint.select = ["E", "F", "I", "N", "UP", "B", "SIM", "TC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires running infrastructure (Postgres, embedder)"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
